SigmaCodebackup3rdSep/objects/Payment_Request_Response_QS__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Request Response QSs</relationshipLabel>
        <relationshipName>Payment_Request_Response_QSs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addon_Comments__c</fullName>
        <label>Addon Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AppID__c</fullName>
        <label>AppID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Code__c</fullName>
        <label>Discount Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Tax_Amount__c</fullName>
        <label>Federal Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Federal_Tax__c</fullName>
        <label>Federal Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Request Response QSs (Merchant Account)</relationshipLabel>
        <relationshipName>Payment_Request_Response_QSs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Transaction_Amount__c</fullName>
        <label>Net Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Payment Request Response QSs</relationshipLabel>
        <relationshipName>Payment_Request_Response_QSs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Request Response QSs (Parent Account)</relationshipLabel>
        <relationshipName>Payment_Request_Response_QSs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_RequestTime__c</fullName>
        <label>Payment RequestTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_ResponseTime__c</fullName>
        <label>Payment ResponseTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QSCompanyID__c</fullName>
        <label>QSCompanyID</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Amount__c</fullName>
        <label>Shipment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sigma_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sigma Order</label>
        <referenceTo>Sigma_Order__c</referenceTo>
        <relationshipLabel>Payment Request Response QSs</relationshipLabel>
        <relationshipName>Payment_Request_Response_QSs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Tax_Amount__c</fullName>
        <label>State Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Token_EndTime__c</fullName>
        <label>Token_EndTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Token_StartTime__c</fullName>
        <label>Token_StartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Token_Status__c</fullName>
        <label>Token_Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Payment Request Response QS</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Payment Request Response QS No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Request Response QSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>